# llm-quantize

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.specify/memory/: constitution.md
docs/: advanced-features.md  api-reference.md  cli-reference.md  development.md  getting-started.md  index.md  quantization-formats.md  qwen35-27b-evaluation.md  roadmap-ultra-low-bit.md
specs/001-multi-format-quantization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-format-quantization/checklists/: requirements.md
specs/001-multi-format-quantization/contracts/: cli-contract.md
specs/002-advanced-quantization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-advanced-quantization/checklists/: requirements.md
specs/002-advanced-quantization/contracts/: cli-contract.md
specs/003-littlebit-factorization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-littlebit-factorization/checklists/: requirements.md
specs/003-littlebit-factorization/contracts/: cli-contract.md
src/llm_quantize/: __init__.py
src/llm_quantize/cli/: __init__.py  analyze.py  convert.py  main.py  quantize.py
src/llm_quantize/lib/: validation.py
tests/: conftest.py
tests/contract/: test_cli_convert.py  test_cli_info.py  test_cli_quantize_awq.py  test_cli_quantize_gguf.py  test_cli_quantize_gptq.py  test_output_formats.py
tests/integration/: test_awq_quantization.py  test_format_conversion.py  test_gguf_quantization.py  test_gptq_quantization.py
tests/unit/: test_checkpoint.py  test_cli_analyze.py  test_cli_main.py  test_cli_quantize.py  test_convert_command.py  test_converter.py  test_model_loader.py  test_models.py  test_package_init.py  test_progress.py  test_quantizers_advanced_init.py  test_quantizers_registry.py  test_validation.py
tests/unit/test_advanced/: __init__.py  test_dynamic.py  test_models.py  test_profiles.py  test_smoothquant.py  test_smoothquant_quantize.py  test_ultra_low_bit.py
tests/unit/test_analysis/: __init__.py  test_calibration.py  test_importance.py  test_quality.py  test_super_weights.py
tests/unit/test_quantizers/: __init__.py  test_awq.py  test_base.py  test_gguf.py  test_gptq.py
