[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-quantize"
version = "0.1.0"
description = "A unified CLI tool for LLM model quantization supporting GGUF, AWQ, and GPTQ formats"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "LLM-Quantize Contributors" }
]
keywords = ["llm", "quantization", "gguf", "awq", "gptq", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.19.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.24.0",
]

[project.optional-dependencies]
gguf = [
    "llama-cpp-python>=0.2.0",
]
awq = [
    "autoawq>=0.1.8",
]
gptq = [
    "auto-gptq>=0.6.0",
]
all = [
    "llm-quantize[gguf,awq,gptq]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-quantize = "llm_quantize.cli.main:cli"

[project.urls]
Homepage = "https://github.com/your-org/llm-quantize"
Documentation = "https://github.com/your-org/llm-quantize#readme"
Repository = "https://github.com/your-org/llm-quantize"
Issues = "https://github.com/your-org/llm-quantize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_quantize"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["llm_quantize"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "safetensors.*",
    "sentencepiece.*",
    "accelerate.*",
    "llama_cpp.*",
    "awq.*",
    "auto_gptq.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
]

[tool.coverage.run]
source = ["src/llm_quantize"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
